# openclass

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  review-2026-05-23.md  start-ai-board.command
.githooks/: prepare-commit-msg
.github/workflows/: verify.yml
apps/api/: .env.example  README.md  pyproject.toml  requirements.txt
apps/web/: AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
docs/: auth-user-management.md  board-task-pipeline-contract.md  chatbot-board-ai-split-map.md  initial-learning-intent-contract.md  resource-intelligence-v1.md
docs/architecture/: chat-workflow-graph.md
docs/maintenance/: await-write-confirmation-refresh-wave10-c2.md  board-task-chat-handoff-refresh-wave10.md  board-task-clarification-split-wave8.md  board-task-confirmation-decline-wave8-c2be.md  board-task-missing-fields-refresh-wave9.md  board-task-missing-fields-wave8.md  board-task-unresolved-edit-conversion-refresh-wave10-e71a.md  board-task-unresolved-edit-conversion-wave8-c2be.md  chatbot-parallel-migration.md  compatibility-cleanup-wave5-inventory.md  compatibility-drift-guard-wave8.md  (+12 more)
launchd/: com.openclass.api.plist  com.openclass.web.plist
launcher/: ai-board-launcher.html  learning-page.html  personal-home.html
scripts/: backfill_realtime_transcripts.py  build-web-if-stale.sh  check-file-sizes.mjs  check_chatbot_compat_drift.py  clear_legacy_resources.py  install-launch-agents.sh  keep-api-up.sh  keep-web-up.sh  reindex_resources.py  strip-cursor-coauthor.py
(+661 files in other folders)
