[project]
name = "ai-board-api"
version = "0.1.0"
description = "FastAPI backend for the AI board course system"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.136.0",
  "uvicorn==0.44.0",
  "pydantic==2.13.2",
  "python-multipart==0.0.26",
  "pypdf==6.10.2",
  "python-docx==1.2.0",
  "reportlab==4.4.4",
  "PyMuPDF==1.26.6",
  "openai==2.32.0",
  "httpx==0.28.1",
  "websockets==15.0.1",
  "python-dotenv==1.1.1",
  "certifi==2025.11.12"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3"
]

[tool.pytest.ini_options]
pythonpath = ["apps/api"]
testpaths = ["apps/api/tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "apps/api"

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["app*"]
exclude = ["data*"]
